--- a/src/assets/styles/components/_productsContent.scss
+++ b/src/assets/styles/components/_productsContent.scss
@@ -6,6 +6,8 @@
 		margin-top: 3em;
 		.item {
 			background: rgb(255, 255, 255);
+			margin: 16px 0;
+			padding: 16px;
 			p {
 				text-transform: uppercase;
 				color: rgb(153, 153, 153);
