--- a/src/assets/styles/components/common/_shelf.scss
+++ b/src/assets/styles/components/common/_shelf.scss
@@ -8,4 +8,14 @@
 	@media screen and (max-width: 600px) {
 		grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
 	}
+	&__not-found {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		padding: 16px 0;
+		img {
+			width: 25%;
+		}
+	}
 }
