--- a/src/assets/styles/components/common/_header.scss
+++ b/src/assets/styles/components/common/_header.scss
@@ -5,9 +5,10 @@
 	height: $headerHeight;
 	width: 100%;
 	.content {
-		display: flex;
 		align-items: center;
+		display: flex;
 		height: 100%;
+		justify-content: space-around;
 	}
 	&__logo {
 		overflow: hidden;
@@ -16,12 +17,6 @@
 		}
 	}
 	&__search {
-		position: relative;
-		flex: 3;
-		margin-left: 5em;
-		max-width: 550px;
-		@media screen and (max-width: 620px) {
-			margin-left: .8em;
-		}
+		width: 50%;
 	}
 }
